--- a/Devel/Config/4.16/git/bfq-sq-mq-haswell-git/config
+++ b/Devel/Config/4.16/git/bfq-sq-mq-haswell-git/config
@@ -523,6 +523,8 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MBROADWELL is not set
 # CONFIG_MSKYLAKE is not set
 # CONFIG_MSKYLAKEX is not set
+# CONFIG_MCANNONLAKE is not set
+# CONFIG_MICELAKE is not set
 CONFIG_GENERIC_CPU=y
 # CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
