add support for cannon lake and ice lake
Signed-off-by: Piotr Gorski <lucjan.lucjanov@gmail.com>

--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -63,7 +63,7 @@ _1k_HZ_ticks=
 pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _srcname=linux-stable-rc
-pkgver=4.16.6.114.g2556b63fc617
+pkgver=4.16.7.53.g113b01a62036
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -74,10 +74,10 @@ _bfqpath="https://gitlab.com/tom81094/custom-patches/raw/master/bfq-mq"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/4.16"
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/4.16"
 _gcc_name="kernel_gcc_patch"
-_gcc_rel='20180310'
+_gcc_rel='20180507'
 _gcc_path="https://github.com/graysky2/kernel_gcc_patch/archive"
-_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v4.9+_kernel_v4.13+.patch"
-_bfq_mq_ver='20180410'
+_gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
+_bfq_mq_ver='20180412'
 _bfq_mq_patch="4.16-bfq-sq-mq-git-${_bfq_mq_ver}.patch"
 
 source=(# mainline kernel
@@ -102,10 +102,10 @@ source=(# mainline kernel
         '0003-Partially-revert-swiotlb-remove-various-exports.patch')
 
 sha256sums=('SKIP'
-            'b2c1292e06544465b636543e6ac8a01959470d32ce3664460721671f1347c815'
-            'de404c2a4af012eb31829183eebc2a291489357d5cd099829b57c194d167525f'
+            '8cf3e0720780db2bcc68e8036a73234eb9f6a0e64ff33d18a93c870633ecde2e'
+            '3518ed9db96d7fc94ed69988c51f58356ccb639e3590cda5946086ee8739bd97'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
-            '4cf6f51319059d0097994b3edaf3c4b9e0db7f312803323833970e5c9ac8f846'
+            '23041a75da90e0dccaf5a67e446ac53a3d3624cd46cfa3e1dda00350b1797e5e'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
             '75f99f5239e03238f88d1a834c50043ec32b1dc568f2cc291b07d04718483919'
             '5f6ba52aaa528c4fa4b1dc097e8930fad0470d7ac489afcb13313f289ca32184'
