--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -88,6 +88,7 @@ source=(# mainline kernel
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         # bfq-mq patch
         "${_lucjanpath}/${_bfq_mq_patch}"
+        "${_lucjanpath}/0004-fix-gcc8-bogus-warnings.patch"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
          # the main kernel config files
         'config'
@@ -106,6 +107,7 @@ source=(# mainline kernel
 sha256sums=('SKIP'
             '8cf3e0720780db2bcc68e8036a73234eb9f6a0e64ff33d18a93c870633ecde2e'
             '3518ed9db96d7fc94ed69988c51f58356ccb639e3590cda5946086ee8739bd97'
+            '159f6ba3e47c9f8de0cf0feda34edbfde3b756807e30615139f8304905e60316'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             '23041a75da90e0dccaf5a67e446ac53a3d3624cd46cfa3e1dda00350b1797e5e'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
@@ -139,6 +141,10 @@ prepare() {
     ### NVIDIA driver compat
         msg "NVIDIA driver compat"
         patch -Np1 -i ../0003-Partially-revert-swiotlb-remove-various-exports.patch
+   
+   ### Fix gcc8 bogus warnings
+        msg "Fix gcc8 bogus warnings"
+        patch -Np1 -i ../0004-fix-gcc8-bogus-warnings.patch
    
    ### Patch source with BFQ-SQ-MQ
         _ver="$(cat Makefile | grep -m1 -e SUBLEVEL | grep -o "[[:digit:]]*")"
