--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -75,9 +75,8 @@ _bfqpath="https://gitlab.com/tom81094/custom-patches/raw/master/bfq-mq"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _gcc_name="kernel_gcc_patch"
-_gcc_name="kernel_gcc_patch"
 _gcc_rel='20180509'
-_gcc_path="https://github.com/graysky2/kernel_gcc_patch/archive"
+_gcc_path="https://github.com/graysky2/${_gcc_name}/archive"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
 _bfq_mq_ver='20180412'
 _bfq_mq_patch="${_major}-bfq-sq-mq-git-${_bfq_mq_ver}.patch"
