--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -64,7 +64,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.16
 _srcname=linux-stable-rc
-pkgver=4.16.8.0.gdec316ea1828
+pkgver=4.16.8.73.gdaccae8696e8
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -87,7 +87,7 @@ source=(# mainline kernel
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         # bfq-mq patch
         "${_lucjanpath}/${_bfq_mq_patch}"
-        "${_lucjanpath}/0004-fix-gcc8-bogus-warnings.patch"
+        "${_lucjanpath}/0005-objtool-add-gcc8-support.patch"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
          # the main kernel config files
         'config'
@@ -106,7 +106,7 @@ source=(# mainline kernel
 sha256sums=('SKIP'
             '226e30068ea0fecdb22f337391385701996bfbdba37cdcf0f1dbf55f1080542d'
             '3518ed9db96d7fc94ed69988c51f58356ccb639e3590cda5946086ee8739bd97'
-            '159f6ba3e47c9f8de0cf0feda34edbfde3b756807e30615139f8304905e60316'
+            '265d3610ab286d42456ace9b817da567a5e741321906f103c40c374db432884b'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             '23041a75da90e0dccaf5a67e446ac53a3d3624cd46cfa3e1dda00350b1797e5e'
             'ae2e95db94ef7176207c690224169594d49445e04249d2499e9d2fbc117a0b21'
@@ -148,7 +148,7 @@ prepare() {
    
    ### Fix gcc8 bogus warnings
         msg "Fix gcc8 bogus warnings"
-        patch -Np1 -i ../0004-fix-gcc8-bogus-warnings.patch
+        patch -Np1 -i ../0005-objtool-add-gcc8-support.patch
    
    ### Patch source with BFQ-SQ-MQ
         _ver="$(cat Makefile | grep -m1 -e SUBLEVEL | grep -o "[[:digit:]]*")"
