--- a/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/linux-bfq-sq-mq-haswell-git/PKGBUILD
@@ -78,7 +78,7 @@ pkgbase=linux-bfq-sq-mq-haswell-git
 _major=4.17
 _srcname=linux
 pkgver=4.17.rc5.0.g67b8d5c70812
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
@@ -95,6 +95,7 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patc
 source=('git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git'
         "${_lucjanpath}/${_bfq_sq_mq_patch}"
         "${_lucjanpath}/0005-objtool-add-gcc8-support.patch"
+        "${_lucjanpath}/0006-include-linux-add-gcc8-support.patch"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
         "${_gcc_path}"
          # the main kernel config files
@@ -138,6 +139,7 @@ prepare() {
     ### Fix gcc8 bogus warnings
         msg "Fix gcc8 bogus warnings"
         patch -Np1 -i ../0005-objtool-add-gcc8-support.patch
+        patch -Np1 -i ../0006-include-linux-add-gcc8-support.patch
     
     ### Patch source with BFQ-SQ-MQ
         _ver="$(cat Makefile | grep -m1 -e PATCHLEVEL | grep -o "[[:digit:]]*")"
@@ -472,6 +474,7 @@ done
 sha512sums=('SKIP'
             '5b860dd67312af2327b9c6abc62d08e285cb81b5e64207f879178dac673cfe67249321ab9bf61e07e6fb855b0d7388061e8bbd4cead0e078886b91beb38599c9'
             'a10a546ecced915ee38075cc6c57eaebb0f8fa58e6af6669d7429ef4880b55bd5782e11dfbda75ce4f805fa5b2399421b4eade8bbbf6766e5aac24a542f1b7a7'
+            'c7353343ee077780f7a705056c825c200644e05607690fcb94bdd58fe801f69396f878d74aa529ebe16705e92c500e7867298f4665dada189f1f77c315683a15'
             '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
             'SKIP'
             '77f80b85b69de0118956b2473c2cb7b220566cac155e6db0faf7b49338d8ecdf07ecebd4b0449aa2f56b587ca7981501f7848f650342608c235f0a3f76dbbafc'
