--- a/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable-rc/linux-bfq-mq-git/PKGBUILD
@@ -64,7 +64,7 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.16
 _srcname=linux-stable-rc
-pkgver=4.16.12.271.g2cb370dedebb
+pkgver=4.16.13.0.gd19433b3d3b9
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
@@ -78,7 +78,7 @@ _gcc_name="kernel_gcc_patch"
 _gcc_rel='20180509'
 _gcc_path="https://github.com/graysky2/${_gcc_name}/archive"
 _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patch"
-_bfq_mq_ver='20180516'
+_bfq_mq_ver='20180531'
 _bfq_mq_patch="${_major}-bfq-sq-mq-git-${_bfq_mq_ver}.patch"
 
 source=(# mainline kernel
@@ -106,7 +106,7 @@ source=(# mainline kernel
 
 sha256sums=('SKIP'
             '226e30068ea0fecdb22f337391385701996bfbdba37cdcf0f1dbf55f1080542d'
-            '98f9f0bb8405d53acfedaca8f5dddbea9c57e2da1572c1b9a3e4cebf96b0e3bf'
+            'f51527f52137a0452a422c0bd766e9a40fb84b9ae78d8d05986862b3a79a74f7'
             '265d3610ab286d42456ace9b817da567a5e741321906f103c40c374db432884b'
             'dcdf569053b086db277ff085390085592ef5b9c71980ee6d4093e2f92f537ef5'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
