--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -30,7 +30,7 @@ _use_KSM="no"		# "yes":	Enable Kernel SamePage Merging (KSM).
 
 pkgdesc='A desktop oriented kernel and modules with Liquorix patches'
 __basekernel=4.16
-pkgver=4.16.7.1.r639.g736fb19
+pkgver=4.16.13.1.r730.g9a03353
 pkgrel=1
 pkgbase=linux-lqx-git
 # pkgname=('linux-lqx-git' 'linux-lqx-git-headers' 'linux-lqx-git-docs')
@@ -76,9 +76,6 @@ _kernelname=${pkgbase#linux}
 
 pkgver() {
   cd ${_lqxpatchname}
-  ## git describe
-  #git describe --tags --long | sed 's/-/./g'
-  ## another
   _ver="${__basekernel}.${_abiname}"
   echo "${_ver}.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
 }
