--- a/linux-usermode-v4.17/linux-usermode-git/PKGBUILD
+++ b/linux-usermode-v4.17/linux-usermode-git/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=linux-usermode-git
 pkgname=('linux-usermode-git' 'linux-usermode-git-modules')
 _major=4.17
 _kernelname=-usermodelinux-git
-_srcname=linux
-pkgver=4.17.rc6.152.ga048a07d7f45
+_srcname=linux-stable
+pkgver=4.17.0.g29dcea88779c
 pkgrel=1
 pkgdesc="User mode Linux kernel and modules"
 arch=('x86_64')
@@ -15,7 +15,7 @@ url="http://user-mode-linux.sourceforge.net/"
 depends=('coreutils')
 makedepends=('bc' 'inetutils' 'git' 'gcc54')
 source=(
-  "git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
+  "git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git#branch=linux-${_major}.y"
   'config'
   '70-uml.hook')
 
