--- a/linux-usermode-v4.17/linux-usermode/PKGBUILD
+++ b/linux-usermode-v4.17/linux-usermode/PKGBUILD
@@ -5,10 +5,9 @@ pkgbase=linux-usermode
 pkgname=('linux-usermode' 'linux-usermode-modules')
 _kernelname=-usermodelinux
 _major=4.17
-#_rcver=rc7
-#_srcname=linux-v${_major}-${_rcver}
-_srcname=linux-v${_major}
-#pkgver=${_major}${_rcver}
+_srcname=linux-${_major}
+#_minor=13
+#pkgver=${_major}.${_minor}
 pkgver=${_major}
 pkgrel=1
 pkgdesc="User mode Linux kernel and modules"
@@ -17,12 +16,15 @@ license=('GPL2')
 url="http://user-mode-linux.sourceforge.net/"
 depends=('coreutils')
 makedepends=('bc' 'inetutils' 'gcc54')
-source=(
-  "https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/snapshot/$_srcname.tar.gz"
+source=("https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.xz"
+        "https://www.kernel.org/pub/linux/kernel/v4.x/${_srcname}.tar.sign"
+        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.xz"
+        #"https://www.kernel.org/pub/linux/kernel/v4.x/patch-${pkgver}.sign"
   'config'
   '70-uml.hook')
 
-sha256sums=('dcf6f1719fc12a58a4396e1f39d0d59d625d4c81409cdc2691c4afcab3696837'
+sha256sums=('9faa1dd896eaea961dc6e886697c0b3301277102e5bc976b2758f9a62d3ccd13'
+            'SKIP'
             '0bcc2be60fe7e974078d5ff81cba81925f46a982526f38fd5a8081968ed64f02'
             '452b8d4d71e1565ca91b1bebb280693549222ef51c47ba8964e411b2d461699c')
 
@@ -34,6 +36,9 @@ validpgpkeys=(
 prepare() {
   cd ${_srcname}
 
+  # add upstream patch
+  #patch -p1 -i ../patch-${pkgver}
+  
   cat ../config - >.config <<END
 CONFIG_LOCALVERSION="${_kernelname}"
 CONFIG_LOCALVERSION_AUTO=n
