--- a/linux-bfq-sq-mq-haswell-v4.17/unstable/linux-bfq-sq-mq-haswell-git/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/unstable/linux-bfq-sq-mq-haswell-git/PKGBUILD
@@ -78,7 +78,7 @@ pkgbase=linux-bfq-sq-mq-haswell-git
 _major=4.17
 _srcname=linux-stable-rc
 pkgver=4.17.0.g29dcea88779c
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
@@ -95,10 +95,7 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patc
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_bfq_sq_mq_patch}"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
-        "${_lucjanpath}/blk-mq-miscellaneous-v1/0022-blk-mq-avoid-to-starve-tag-allocation-after-allocation-process-migrates.patch"
-        "${_lucjanpath}/bfq-pf/0901-block-bfq-postpone-rq-preparation-to-insert-or-merge.patch"
-        "${_lucjanpath}/block-pf/0920-block-fixes-from-pfkernel.patch"
-        "${_lucjanpath}/block-pf/0930-block-fixes-from-pfkernel.patch"
+        "${_lucjanpath}/pf-fixes/0900-fixes-from-pfkernel.patch"
         "${_gcc_path}"
          # the main kernel config files
         'config'
@@ -138,15 +135,9 @@ prepare() {
         msg "Fix #56711"
         patch -Np1 -i ../0002-Revert-drm-i915-edp-Allow-alternate-fixed-mode-for-e.patch
     
-    ### Add blk fixes
-        msg "Add blk fixes"
-        patch -Np1 -i ../0022-blk-mq-avoid-to-starve-tag-allocation-after-allocation-process-migrates.patch
-    
-    ### Add block-bfq fixes
-        msg "Add block-bfq fixes"
-        patch -Np1 -i ../0901-block-bfq-postpone-rq-preparation-to-insert-or-merge.patch
-        patch -Np1 -i ../0920-block-fixes-from-pfkernel.patch
-        patch -Np1 -i ../0930-block-fixes-from-pfkernel.patch
+    ### Add fixes from pf-kernel
+        msg "Add fixes from pf-kernel"
+        patch -Np1 -i ../0900-fixes-from-pfkernel.patch
     
     ### Patch source with BFQ-SQ-MQ
         _ver="$(cat Makefile | grep -m1 -e PATCHLEVEL | grep -o "[[:digit:]]*")"
@@ -481,10 +472,7 @@ done
 sha512sums=('SKIP'
             'eac92c83cee6907f155434f8373a0ef2dbff9095d3aa7b8b0bd383d6dda03fe52c8f79cf6933e55e6b668cb762b3babbfc40fe801d2a2440e92d3200ced2b4e0'
             '0f96fa9ad784709973b32eea82075ceb3e9dc2482df6441a4607612806f069254e63508b1b562279622394e4a1fbebef1b87af8401c0b1210d5d0de9954245c8'
-            'b0f4a01c13f3a9c4df5681de0e1805441728c7ab29903b2fbd19324feb28424ea55ee3701f80e17c0b6178679d87672d5d981fef50ede04d08fc0de524d1b012'
-            'dc66ed479f01ce236d7acab4667929b8b6a741943b4436e8c2dabd05c381f1bd62fe8ac451d6240656b05ffc932f851eba71f94528a40d89f55d45c25da8f223'
-            '25f58b03742f8aa212d6bbec98f1e01116b849fc44c0a7b577039c27f8e3305d56f150220653340acddaaf9c0b8f029b610084712f841255032f13b5087bd867'
-            '381e63d6f98fee564dfd83277dff79e630f04275adc9d09de25095f6c336843681c3510757c4543dab65b93c7abfd2bfb4efc898748e38564abc751a2f5138ec'
+            '900051674b5c8a4cf11e63c02b1fa882765b8d8cfccc3ea8af41cfd3ac3694a331092516d41a882724ffaa04081ace8c35a2b8d70f0d2f5c698d31d66c6c3158'
             'SKIP'
             'ec890dd1baab3270f84c5a2edea5cec2899b1e16925fcd7e29c63e7a76d54802c2cd24dcc512cc6fb01d78dafb310ea803c17026b507f73470fdb1240c597b11'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
