--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/PKGBUILD
@@ -64,8 +64,8 @@ pkgbase=linux-bfq-mq-git
 #pkgbase=linux-custom       # Build kernel with a different name
 _major=4.16
 _srcname=linux-stable
-pkgver=4.16.13.0.gd19433b3d3b9
-pkgrel=3
+pkgver=4.16.14.0.g03329bc68158
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/Algodev-github/bfq-mq/"
 license=('GPL2')
@@ -87,7 +87,6 @@ source=(# mainline kernel
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         # bfq-mq patch
         "${_lucjanpath}/${_bfq_mq_patch}"
-        "${_lucjanpath}/0005-objtool-add-gcc8-support.patch"
         "${_lucjanpath}/0006-include-linux-add-gcc8-support.patch"
         "${_lucjanpath}/0100-Check-presence-on-tree-of-every-entity-after-every-a.patch"
          # the main kernel config files
@@ -107,7 +106,6 @@ source=(# mainline kernel
 sha256sums=('SKIP'
             '226e30068ea0fecdb22f337391385701996bfbdba37cdcf0f1dbf55f1080542d'
             '1f2b2e67b83c297e00b844f3c3708d5113f215b99bc0b2c042271818fa4f7340'
-            '265d3610ab286d42456ace9b817da567a5e741321906f103c40c374db432884b'
             'dcdf569053b086db277ff085390085592ef5b9c71980ee6d4093e2f92f537ef5'
             'eb3cb1a9e487c54346b798b57f5b505f8a85fd1bc839d8f00b2925e6a7d74531'
             'b77ffe5194f8e1c1fa4e5a9ef931e8094a54a9ef291c67ddbbe3495d98fa9c91'
@@ -145,7 +143,6 @@ prepare() {
    
    ### Fix gcc8 bogus warnings
         msg "Fix gcc8 bogus warnings"
-        patch -Np1 -i ../0005-objtool-add-gcc8-support.patch
         patch -Np1 -i ../0006-include-linux-add-gcc8-support.patch
    
    ### Patch source with BFQ-SQ-MQ
