--- a/linux-bfq-sq-mq-haswell-v4.17/unstable/linux-bfq-sq-mq-haswell/PKGBUILD
+++ b/linux-bfq-sq-mq-haswell-v4.17/unstable/linux-bfq-sq-mq-haswell/PKGBUILD
@@ -77,8 +77,8 @@ pkgbase=linux-bfq-sq-mq-haswell
 # pkgname=('linux-bfq-sq-mq-haswell-kernel' 'linux-bfq-sq-mq-haswell-headers' 'linux-bfq-sq-mq-haswell-docs')
 _major=4.17
 _srcname=linux-${_major}
-#_minorc=14
-#_minor=$((_minorc-1))
+#_minor=0
+#_minorc=$((_minor+1))
 #_rcver=rc1
 #pkgver=${_major}.${_minorc}
 #_stable=${_major}.${_minor}
