--- a/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
+++ b/linux-uksm-v4.17/stable-rc/linux-uksm/PKGBUILD
@@ -52,8 +52,8 @@ pkgbase=linux-uksm
 # pkgname=('linux-uksm' 'linux-uksm-headers' 'linux-uksm-docs')
 _major=4.17
 _srcname=linux-${_major}
-#_minorc=14
-#_minor=$((_minorc-1))
+#_minor=0
+#_minorc=$((_minor+1))
 #_rcver=rc1
 #pkgver=${_major}.${_minorc}
 #_stable=${_major}.${_minor}
