--- a/linux-usermode-v4.17/stable-rc/linux-usermode-rc-git/PKGBUILD
+++ b/linux-usermode-v4.17/stable-rc/linux-usermode-rc-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Piotr Gorski <lucjan.lucjanov@gmail.com>
 # Contributor: Haruue Icymoon <haruue@caoyue.com.cn>
 
-pkgbase=linux-usermode-git
-pkgname=('linux-usermode-git' 'linux-usermode-git-modules')
+pkgbase=linux-usermode-rc-git
+pkgname=('linux-usermode-rc-git' 'linux-usermode-rc-git-modules')
 _major=4.17
 _kernelname=-usermodelinux-git
 _srcname=linux-stable-rc
@@ -56,7 +56,7 @@ build() {
 }
 
 _package() {
-  conflicts=('linux-usermode-rc' 'linux-usermode-rc-git' 'linux-usermode')
+  conflicts=('linux-usermode-rc' 'linux-usermode-git' 'linux-usermode')
   
   cd ${_srcname}
   mkdir -p "$pkgdir/usr/bin" "$pkgdir/usr/share/kernel-usermode"
@@ -65,7 +65,7 @@ _package() {
 }
 
 _package-modules() {
-  conflicts=('linux-usermode-rc-modules' 'linux-usermode-rc-git-modules'
+  conflicts=('linux-usermode-rc-modules' 'linux-usermode-git-modules'
              'linux-usermode-modules')
   
   cd ${_srcname}
