--- a/dots/syslinux.cfg
+++ b/dots/syslinux.cfg
@@ -18,8 +18,8 @@
 # Please review the wiki: https://wiki.archlinux.org/index.php/Syslinux                                                                                                                         
 # The wiki provides further configuration examples                                                                                                                                              
                                                                                                                                                                                                 
-DEFAULT arch_linux_bfq_sq_mq_haswell
-# DEFAULT arch_linux_bfq_sq_mq_haswell_git
+DEFAULT arch_linux_lucjan
+# DEFAULT arch_linux_lucjan_git
 PROMPT 0        # Set to 1 if you always want to display the boot: prompt                                                                                                                       
 TIMEOUT 50                                                                                                                                                                                      
 # You can create syslinux keymaps with the keytab-lilo tool                                                                                                                                     
@@ -75,28 +75,28 @@ LABEL arch_linux_fallback
     INITRD ../intel-ucode.img,../initramfs-linux-fallback.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
 
-LABEL arch_linux_bfq_sq_mq_haswell
+LABEL arch_linux_lucjan
     MENU LABEL Arch Linux BFQ SQ MQ Haswell 
-    LINUX ../vmlinuz-linux-bfq-sq-mq-haswell
-    INITRD ../intel-ucode.img,../initramfs-linux-bfq-sq-mq-haswell.img
+    LINUX ../vmlinuz-linux-lucjan
+    INITRD ../intel-ucode.img,../initramfs-linux-lucjan.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
     
-LABEL arch_linux_bfq_sq_mq_haswell_fallback
+LABEL arch_linux_lucjan_fallback
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Fallback
-    LINUX ../vmlinuz-linux-bfq-sq-mq-haswell
-    INITRD ../intel-ucode.img,../initramfs-linux-bfq-sq-mq-haswell-fallback.img
+    LINUX ../vmlinuz-linux-lucjan
+    INITRD ../intel-ucode.img,../initramfs-linux-lucjan-fallback.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
 
-LABEL arch_linux_bfq_sq_mq_haswell_git
+LABEL arch_linux_lucjan_git
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Git 
-    LINUX ../vmlinuz-linux-bfq-sq-mq-haswell-git
-    INITRD ../intel-ucode.img,../initramfs-linux-bfq-sq-mq-haswell-git.img
+    LINUX ../vmlinuz-linux-lucjan-git
+    INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
     
 LABEL arch_linux_bfq_sq-mq_haswell_git_fallback
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Git Fallback
-    LINUX ../vmlinuz-linux-bfq-sq-mq-haswell-git
-    INITRD ../intel-ucode.img,../initramfs-linux-bfq-sq-mq-haswell-git-fallback.img
+    LINUX ../vmlinuz-linux-lucjan-git
+    INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git-fallback.img
     APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
     
 LABEL hdt
