--- a/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/config
+++ b/fork-off-linux-bfq-mq-git/stable/linux-bfq-mq-git/config
@@ -53,7 +53,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-bfq-mq"
+CONFIG_LOCALVERSION="-bfq-mq-git"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
@@ -497,10 +497,10 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MK10 is not set
 # CONFIG_MBARCELONA is not set
 # CONFIG_MBOBCAT is not set
+# CONFIG_MJAGUAR is not set
 # CONFIG_MBULLDOZER is not set
 # CONFIG_MPILEDRIVER is not set
 # CONFIG_MSTEAMROLLER is not set
-# CONFIG_MJAGUAR is not set
 # CONFIG_MEXCAVATOR is not set
 # CONFIG_MZEN is not set
 # CONFIG_MPSC is not set
