--- a/dots/syslinux.cfg
+++ b/dots/syslinux.cfg
@@ -67,37 +67,36 @@ LABEL arch_linux
     MENU LABEL Arch Linux
     LINUX ../vmlinuz-linux
     INITRD ../intel-ucode.img,../initramfs-linux.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
 
 LABEL arch_linux_fallback
     MENU LABEL Arch Linux Fallback
     LINUX ../vmlinuz-linux
     INITRD ../intel-ucode.img,../initramfs-linux-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
 
 LABEL arch_linux_lucjan
     MENU LABEL Arch Linux BFQ SQ MQ Haswell 
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
     
 LABEL arch_linux_lucjan_fallback
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Fallback
     LINUX ../vmlinuz-linux-lucjan
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo 
 
 LABEL arch_linux_lucjan_git
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Git 
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
-    
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
 LABEL arch_linux_bfq_sq-mq_haswell_git_fallback
     MENU LABEL Arch Linux BFQ SQ MQ Haswell Git Fallback
     LINUX ../vmlinuz-linux-lucjan-git
     INITRD ../intel-ucode.img,../initramfs-linux-lucjan-git-fallback.img
-    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo ipv6.disable=1
+    APPEND root=/dev/sda5 rw quiet acpi_backlight=vendor acpi_osi=Linux acpi_osi='!Windows 2012' zswap.enabled=1 zswap.compressor=lzo
     
 LABEL hdt
         MENU LABEL HDT (Hardware Detection Tool)
